@@ -5,6 +5,7 @@ plugins {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED", "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
 }
 
 tasks.test {
